--- a/09fullpage/css/style.css
+++ b/09fullpage/css/style.css
@@ -14,10 +14,22 @@ body{
 .pt50{padding-top: 50px;}
 .pt60{padding-top: 60px;}
 
-.navbar{z-index: 3;}
+.navbar{z-index: 3;transition: 0.3s;}
+.navbar.onView{background: #000;}
 .navbar.bg-blk{
-    background: rgba(0,0,0,0.3);
+    background: rgba(0,0,0,0.5);
 }
+.navbar .navbar-brand{
+    background-image: url(../images/logo.png);
+    background-repeat: no-repeat;background-position:center;
+    background-size: contain;width: 248px;height: 38px;transition: 0.3s;
+}
+.navbar .navbar-brand.ud{
+    background-image: url(../images/logo_bt.png);
+    background-repeat: no-repeat;background-position:center;
+    background-size: contain;width: 248px;height: 38px;
+}
+.navbar .navbar-brand a.logo{text-indent: -9999px;display: block;width: 248px;height: 38px;}
 .navbar .navbar-nav .menu{
     font-weight: 500;font-size: 16px;color: #262626;
 }
@@ -361,6 +373,36 @@ input.zipcode{
     background-image: url(../images/sns-hover04.png);
 }
 
+/* modal */
+.glaylayer{
+    width: 100%;height: 100%;
+    background: #fff;opacity: 0.5;
+    position: fixed;top: 0;left: 0;
+    display: none;
+}
+.overlayer{
+    position: fixed;top: 50%;left: 50%;
+    transform: translate(-50%,-50%);
+    display: none;
+}
+.modal-box01{
+    width: 400px;height: 563px;
+    position: absolute;top: 50%;left: 50%;
+    transform: translate(-50%,-50%);z-index: 2;
+    background: #48D3CD;
+    padding: 87px 71px;border-radius: 10px;color: white;
+}
+.modal-close{
+    width: 24px;height: 24px;z-index: 3;
+    position: absolute;top: 210px;right: 80px;
+}
+.modal-close a{
+    display: block;width: 100%;height: 100%;
+    background-image: url(../images/close.png);
+    background-repeat: no-repeat;background-size: cover;
+    background-position:center;text-indent: -9999px;
+}
+
 @media screen and (min-width:758px) and (max-width:991px){ /* md */
     .sec01 .sec01_lf,.sec01 .sec01_rt{
         background-size:cover;
@@ -402,6 +444,16 @@ input.zipcode{
     .prev-btn {
         background-image: url(../images/prev_slide.png);
         top: 35%;left: 0;
+    }
+
+    .sec2-box{padding-right: 0;}
+    .sec2-box .btn{
+        transition: 0.3s;width: 50%;
+        border: 1px solid #fff;border-radius: 10px;display: block;
+        color: #fff;font-weight: 700;padding: 10px 0;
+    }
+    .sec2-box .btn:hover{
+        background: #fff;color: #2E40FA;font-weight: 700;
     }
 
     .sec03 .sec03_lf,.sec03 .sec03_rt{
