--- a/09fullpage/css/style.css
+++ b/09fullpage/css/style.css
@@ -374,7 +374,7 @@ input.zipcode{
 }
 
 /* modal */
-.glaylayer{
+/* .glaylayer{
     width: 100%;height: 100%;
     background: #fff;opacity: 0.5;
     position: fixed;top: 0;left: 0;
@@ -384,8 +384,8 @@ input.zipcode{
     position: fixed;top: 50%;left: 50%;
     transform: translate(-50%,-50%);
     display: none;
-}
-.modal-box01{
+} */
+/* .modal-box01{
     width: 400px;height: 563px;
     position: absolute;top: 50%;left: 50%;
     transform: translate(-50%,-50%);z-index: 2;
@@ -401,7 +401,43 @@ input.zipcode{
     background-image: url(../images/close.png);
     background-repeat: no-repeat;background-size: cover;
     background-position:center;text-indent: -9999px;
+} */
+
+/* .sec01 .modal01_bg{
+    display: none;position: fixed;left: 0;top: 0;z-index: 5;
+    width: 100%;height: 100%;background-color:rgba(0,0,0,0.5);
 }
+.sec01 .modal01_bg .modal01_img{
+    position: fixed;left: 50%;top: 50%;z-index: 6;
+    transform: translate(-50%,-50%);
+    width: 400px;height: 563px;display: none;
+} */
+.sec01{position: relative;}
+#modal.modal_overlay{
+    width: 100%;height: 100%;
+    position: absolute;left: 0;top: 0;
+    background:rgba(255, 255, 255, 0.3);z-index: 5;
+    display: none;flex-direction: column;
+    align-items: center;justify-content: center;
+}
+#modal .modal-window{
+    width: 400px;height: 563px;background: #48D3CD;
+    position: relative;top: 50%;left: 50%;transform: translate(-50%,-50%);
+    border-radius: 10px;box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.5);
+}
+#modal .modal-window .modal-content{
+    position: absolute;top: 0;left: 0;
+    padding: 87px 71px;background:transparent;
+    border: 0 none;
+}
+#modal .modal-window .modal-content p{
+    font-size: 18px;color: #fff;  
+}
+#modal .modal-window img{
+    position: absolute;top: 30px;right: 30px;
+    cursor: pointer;z-index: 5;
+}
+
 
 @media screen and (min-width:758px) and (max-width:991px){ /* md */
     .sec01 .sec01_lf,.sec01 .sec01_rt{
